# openfoam-ships

./: .gitignore  README.md  Snakefile  VERIFICATION.md  benchmark_of13_DTCHullWave.sh  benchmark_tutorials.sh  cluster.env.template  debug_rigidBodyHull.sh  pyproject.toml
.snakemake/metadata/: YnVpbGQvZW1wdHlfdGFuaw==  YnVpbGQvd2lnbGV5  cmVzdWx0cy93aWdsZXkvMC4x  cmVzdWx0cy93aWdsZXkvbG9nLmludGVyRm9hbQ==  cmVzdWx0cy93aWdsZXkvdmlzdWFsaXphdGlvbi5wbmc=  cmVzdWx0cy9lbXB0eV90YW5rL2xvZy5pbnRlckZvYW0=  cmVzdWx0cy9lbXB0eV90YW5rL3Zpc3VhbGl6YXRpb24ucG5n  cmVzdWx0cy9lbXB0eV90YW5rLzAuMQ==
cases/: dtc_test.toml
cases/dtc/: case.toml
cases/dtc_test/: Allrun
cases/empty_tank/: case.toml
cases/kcs/: case.toml
cases/kcs_mesh_base/: case.toml
cases/series60/: case.toml  series60.stl
cases/stokes_wave/: case.toml
cases/wigley/: case.toml  wigley_fixed.stl
config/geometry/: dtc_hull.stl  kcs_hull.stl
docker/: ESI_TOOLS.md  Makefile  README.md  README_solver.md  README_v2506.md  entrypoint.sh  openfoam-solver.Dockerfile  openfoam13.Dockerfile  openfoam2406.Dockerfile  python-extract.Dockerfile
docs/: python_guidelines.md
scripts/: analyze_benchmark.sh  download_results.sh  extract_results.py  pull_containers.sh  regenerate_forces_v2.py  run_esi_case.py  run_job.sh  submit_delft_blue.sh  submit_job.sh  submit_snellius.sh  sweep_velocity_esi.py  sync_to_hpc.sh
scripts/legacy/: benchmark_rigidBodyHull.sh  stop-simulation.sh
templates/base/: header.j2
templates/scripts/: Allrun.j2  surfaceFeatureExtractDict.template  surfaceFeaturesDict.template
(+70 files in other folders)
